<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">inma.mobility 4.1</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="go">Snap</string>
	<string name="title_activity_web_service">WebService</string>
	<string name="action_settings">Settings</string>
	<string name="hello">MODULO DE CAMARA</string>
	<string name="btnIntend">Tomar Foto (grande 2048 x 1536 o menor)</string>
	<string name="btnIntendS">Tomar Foto</string>
	<string name="btnIntendV">Tomar Video</string>
	<string name="cannot">Cannot</string>
	<string name="album_name">Camera</string>
	<string name="btnExit">Enviar fotos</string>
	<string name="soap_json_url">http://inmaapps1.grupoinma.com/MobilityService/service.asmx</string>
	<string name="soap_json_namespace">http://inmaapps1.grupoinma.com/MobilityService</string>
	<string name="soap_json_method">inmaEst_estimateProcess</string>
	<string name="soap_json_action">http://inmaapps1.grupoinma.com/MobilityService/inmaEst_estimateProcess</string>	
	<string name="soap_image_url">http://inmaapps1.grupoinma.com/WSSite/Inmaestimglb.asmx</string>
	<string name="soap_image_namespace">http://inmaapps1.grupoinma.com/IEWsimage/</string>
	<string name="soap_image_method">SaveImg</string>
	<string name="soap_image_action">http://inmaapps1.grupoinma.com/IEWsimage/SaveImg</string>

	<drawable name="Blue">#000099</drawable>
	<drawable name="Blue_title">#0066FF</drawable>
	<drawable name="white">#ffffff</drawable>
	<drawable name="black">#000000</drawable>
	<drawable name="green">#347C2C</drawable>
	<drawable name="pink">#FF00FF</drawable>
	<drawable name="violet">#a020f0</drawable>
	<drawable name="grey">#cccccc</drawable>
	<drawable name="red">#C11B17</drawable>
	<drawable name="yellow">#FFFF8C</drawable>
	<drawable name="PowderBlue">#b0e0e6</drawable>
	<drawable name="brown">#2F1700</drawable>
	<drawable name="transp">#80000000</drawable>

	<string name="labelplaka">Placa del Vehículo:</string>
	<string name="labelserial">Serial Carrocería:</string>
	<string name="labelkilometros">Kilometraje:</string>
	<string name="labelannio">Año:</string>
	<string name="button_text">_LECTURA DE PLACA POR OCR_ </string>
	<string name="button_text2">ENVIAR </string>
	<string name="text_hint"> Placa aquí</string>
	<string name="title_activity_splash">SplashActivity</string>
	<string name="title_activity_estimacion">Estimacion</string>
	<string name="lista_vacia">Sin Datos</string>
	<string name="title_activity_estimacion_grid_view">EstimacionGridView</string>
	<string name="titulo1">   Id Estimacion            -</string>
	<string name="titulo2"> F e c h a          -</string>
	<string name="titulo3">P l a c a   -</string>
	<string name="titulo4">P e r i t o  -</string>
	<string name="titulo5"> E s t a t u s -</string>
	<string name="lblSpinner"> PERFIL:   </string>
	<string name="lblSpinnerT"> TALLER:   </string>
	<string name="lblSiniestro"> SINIESTRO: </string>
<!-- 	<string name="titulo6">Estatus</string> -->
	<string name="title_activity_data_entry">Entrada de Datos</string>
    <string-array name="profiles_array">
        <item>LINEA AMARILLA</item>
        <item>LINEA VERDE</item>
        <item>LINEA NARANJA</item>
        <item>LINEA ROJA</item>
    </string-array>
    <string-array name="profiles_arrayT">
        <item>INMA Ingeniería Automotriz, C.A.</item>
        <item>Mercantil Seguros - SAM</item>
        <item>Taller las Lolas</item>
        <item>Taller El Frenazo</item>
    </string-array>    
    <string name="title_activity_login">Login</string>
</resources>