<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/splash0"
	android:orientation="vertical" >

  <TextView
  	android:id="@+id/titulo"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="60dp"
  	android:layout_marginTop="40dp"
  	android:ellipsize="none"
  	android:padding="15dip"
  	android:text="INMAEst Movil"
  	android:textColor="#0000FF"
  	android:textSize="50sp"
  	android:textStyle="bold"
  	android:typeface="normal" />	
	
    <Button
    	android:id="@+id/button"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="330dp"
    	android:layout_marginTop="10dp"
    	android:background="@drawable/Blue"
    	android:text="@string/button_text"
    	android:textSize="26sp" />
    
    <Button
    	android:id="@+id/button2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="470dp"
    	android:layout_marginTop="10dp"
    	android:background="@drawable/green"
    	android:text="@string/button_text2"
    	android:textSize="26sp"
    	android:textStyle="bold"
    	android:visibility="visible" />

    <EditText
    	android:id="@+id/field"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="430dp"
    	android:layout_marginTop="20dp"
    	android:background="@drawable/grey"
    	android:hint="@string/text_hint"
    	android:maxLength="7"
    	android:maxLines="1"
    	android:textColor="@drawable/Blue"
    	android:textSize="36sp"
    	android:textStyle="bold" />

</LinearLayout>