<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="1"
    android:background="@drawable/fondopagina"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="0dp"
    tools:context="com.datumdroid.android.ocr.simple.DataEntry" >

	<RelativeLayout
		android:id="@+id/main_button_view"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="620dp"
		android:visibility="visible" >

	    <Button
	    	android:id="@+id/button1"
	    	android:layout_width="60dp"
	    	android:layout_height="60dp"
	    	android:layout_marginLeft="20dp"
	    	android:layout_marginTop="-5dp"
	    	android:background="@drawable/enviar" />

	    <Button
	    	android:id="@+id/button2"
	    	android:layout_width="60dp"
	    	android:layout_height="60dp"
	    	android:layout_marginLeft="90dp"
	    	android:layout_marginTop="-5dp"
	    	android:background="@drawable/regresar" />
	    
	    <Button
	    	android:id="@+id/button3"
	    	android:layout_width="60dp"
	    	android:layout_height="60dp"
	    	android:layout_marginLeft="160dp"
	    	android:layout_marginTop="-5dp"
	    	android:background="@drawable/ajustes" />

<!-- 	    <Button -->
<!-- 	    	android:id="@+id/button7" -->
<!-- 	    	android:layout_width="60dp" -->
<!-- 	    	android:layout_height="60dp" -->
<!-- 	    	android:layout_marginLeft="0dp" -->
<!-- 	    	android:layout_marginTop="-7dp" -->
<!-- 	    	android:background="@drawable/mapamudi" /> -->
    
	</RelativeLayout>

	<LinearLayout
		android:id="@+id/lylabels"
		android:layout_width="533dp"
		android:layout_height="395dp"
		android:layout_marginLeft="-8dp"
		android:baselineAligned="false"
		android:orientation="horizontal"
		android:visibility="visible" >

			<RelativeLayout
				android:id="@+id/exit_button_view"
				android:layout_width="530dp"
				android:layout_height="385dp"
				android:layout_marginLeft="2dp"
				android:layout_marginTop="65dp"
				android:visibility="visible" >

				<Button
					android:id="@+id/button4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="25dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/placarepdominicana" />
				
				<EditText
				    android:id="@+id/editTextplaca"
				    android:layout_width="150dp"
				    android:layout_height="35dp"
				    android:layout_marginLeft="160dp"
				    android:layout_marginTop="7dp"
				    android:background="@drawable/rounded_textview_grisclaro"
				    android:ems="10"
				    android:inputType="textCapCharacters"
				    android:lines="1"
				    android:maxLength="7"
				    android:maxLines="1"
				    android:textColor="@drawable/Blue"
				    android:textSize="22sp"
				    android:textStyle="bold"
				    android:typeface="normal"
				    android:visibility="invisible" />				

				<ImageButton
					android:id="@+id/imageButtonCam"
					android:layout_width="40dp"
					android:layout_height="48dp"
					android:layout_marginLeft="290dp"
					android:layout_marginTop="10dp"
					android:background="@drawable/rounded_textview_grisclaro"
					android:contentDescription="OCR para tomar foto de la Placa"
					android:src="@drawable/camara"
					android:visibility="invisible" />
				
				<Button
					android:id="@+id/button5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="27dp"
					android:layout_marginTop="65dp"
					android:background="@drawable/serialcarrroceria2" />

					<EditText
						android:id="@+id/EditTextserial"
						android:layout_width="270dp"
						android:layout_height="35dp"
						android:layout_marginLeft="160dp"
						android:layout_marginTop="72dp"
						android:background="@drawable/rounded_textview_grisclaro"
						android:ems="10"
						android:inputType="textCapCharacters"
						android:lines="1"
						android:maxLength="17"
						android:maxLines="1"
						android:textColor="@drawable/Blue"
						android:textSize="20sp"
						android:textStyle="bold"
						android:typeface="normal"
						android:visibility="invisible" >
	
					<requestFocus />
				</EditText>
				
				<Button
					android:id="@+id/button6"
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="25dp"
					android:layout_marginTop="125dp"
					android:background="@drawable/tacometro2" />
					
				<EditText
					android:id="@+id/EditTextkilometros"
					android:layout_width="170dp"
					android:layout_height="35dp"
					android:layout_marginTop="128dp"
					android:layout_marginLeft="160dp"
					android:alpha="1"
					android:background="@drawable/rounded_textview_grisclaro"
					android:ems="10"
					android:inputType="number"
					android:lines="1"
					android:maxLength="7"
					android:maxLines="1"
					android:textColor="@drawable/Blue"
					android:textColorLink="@drawable/red"
					android:textSize="24sp"
					android:textStyle="bold"
					android:typeface="normal"
					android:visibility="invisible" />
				
				<TextView
					android:id="@+id/txtSiniestro"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="195dp"
					android:layout_marginLeft="28dp"
					android:textColor="@drawable/Blue"
					android:textSize="20sp"
					android:textStyle="bold"
					android:typeface="normal"					
					android:text="@string/lblSiniestro"				
					android:visibility="invisible" />					
				
				<EditText
					android:id="@+id/EditTextNumSiniestro"
					android:layout_width="300dp"
					android:layout_height="35dp"
					android:layout_marginTop="190dp"
					android:layout_marginLeft="160dp"
					android:alpha="1"
					android:background="@drawable/rounded_textview_grisclaro"
					android:ems="10"
					android:inputType="number"
					android:lines="1"
					android:maxLength="20"
					android:maxLines="1"
					android:textColor="@drawable/Blue"
					android:textColorLink="@drawable/red"
					android:textSize="22sp"
					android:textStyle="bold"
					android:typeface="normal"
					android:visibility="invisible" />				
				
				<TextView
					android:id="@+id/txtSpinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="250dp"
					android:layout_marginLeft="30dp"
					android:textColor="@drawable/Blue"
					android:textSize="24sp"
					android:textStyle="bold"
					android:typeface="normal"					
					android:text="@string/lblSpinner"
					android:layout_marginBottom="50dp"					
					android:visibility="invisible" />				

				<Spinner
					android:id="@+id/spinner1"
					style="@style/SpinnerItem"
					android:layout_width="260dp"
					android:layout_height="30dp"
					android:layout_marginTop="250dp"
					android:layout_marginLeft="160dp"
					android:prompt="@drawable/white"
					android:textColor="@drawable/white"
					android:textSize="24sp"
					android:textStyle="bold"
					android:layout_marginBottom="50dp"					
					android:visibility="invisible" />
				
				<TextView
					android:id="@+id/txtSpinnerT"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="300dp"
					android:layout_marginLeft="30dp"
					android:textColor="@drawable/Blue"
					android:textSize="24sp"
					android:textStyle="bold"
					android:typeface="normal"					
					android:text="@string/lblSpinnerT"				
					android:visibility="invisible" />				

				<Spinner
					android:id="@+id/spinnerT"
					style="@style/SpinnerItem"
					android:layout_width="350dp"
					android:layout_height="30dp"
					android:layout_marginTop="300dp"
					android:layout_marginLeft="160dp"
					android:prompt="@drawable/white"
					android:textColor="@drawable/white"
					android:textSize="24sp"
					android:textStyle="bold"					
					android:visibility="invisible" />					
			
			</RelativeLayout>
			
	</LinearLayout>
		
</LinearLayout>
